fix(ui): version dropdown now visible in mobile sidebar (build)

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -175,10 +175,7 @@ hr {
 .dropdown {
   min-width: 3rem;
   text-align: right;
-}
-
-.dropdown {
-  @apply flex justify-end items-center rounded-md h-12;
+  @apply !flex justify-end items-center rounded-md h-12;
 }
 
 .navbar-sidebar__back {
